<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context="com.techpalle.dravidianuniversityminiproject.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:text="@string/email"
                    android:textSize="@dimen/twentySP"
                    android:textColor="@color/black"
                    android:gravity="start|center"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:paddingLeft="4dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/shape_edit_text"
                    android:textColor="@color/black"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_login_user_name"/>
             </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:text="@string/password"
                    android:textSize="@dimen/twentySP"
                    android:textColor="@color/black"
                    android:gravity="start|center"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:paddingLeft="4dp"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_login_password"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:text="@string/login"
                    android:gravity="center"
                    android:background="@color/button"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/button_login_login"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotPass"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/twentySP"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:text="@string/regisEmail"
                    android:textSize="@dimen/twentySP"
                    android:textColor="@color/black"
                    android:gravity="start|center"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:paddingLeft="4dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_forgot_pass_email"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:text="@string/reqPassword"
                    android:gravity="center"
                    android:background="@color/button"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/button_forgot_password"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
