<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context="com.techpalle.dravidianuniversityminiproject.RegistraionFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fourtyDP"
        android:src="@drawable/register_header_logo"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyDP"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/eno"
                    android:layout_gravity="center"
                    android:textSize="@dimen/eitheenSP"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_eno"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyDP"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/name"
                    android:layout_gravity="center"
                    android:textSize="@dimen/eitheenSP"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_ename"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyDP"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/email"
                    android:layout_gravity="center"
                    android:textSize="@dimen/eitheenSP"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:paddingLeft="4dp"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_regis_email"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyDP"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/pword"
                    android:layout_gravity="center"
                    android:textSize="@dimen/eitheenSP"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:textColor="@color/black"
                    android:paddingLeft="4dp"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_regis_password"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyDP"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/confirm"
                    android:layout_gravity="center"
                    android:textSize="@dimen/eitheenSP"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:textColor="@color/black"
                    android:paddingLeft="4dp"
                    android:inputType="textPassword"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_confirm_password"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyDP"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".25"
                    android:text="@string/hint"
                    android:layout_gravity="center"
                    android:textSize="@dimen/eitheenSP"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/twentySP"
                    android:textColor="@color/black"
                    android:paddingLeft="4dp"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_password_hint"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fourtyDP"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:background="@color/button"
                    android:text="@string/register"
                    android:id="@+id/button_register"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:background="@color/button"
                    android:text="@string/login"
                    android:id="@+id/button_regis_login"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
