<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image"
    tools:context="com.techpalle.dravidianuniversityminiproject.PhdDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="14dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".28"
                    android:text="@string/no"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:paddingLeft="4dp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_student_no"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".28"
                    android:text="@string/name"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingLeft="4dp"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_student_ename"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".28"
                    android:text="@string/mobile"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_mobile"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".28"
                    android:text="@string/email"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:paddingLeft="4dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_student_email"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".28"
                    android:text="@string/subject"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_subject"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".28"
                    android:text="@string/description"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:paddingLeft="4dp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".02"
                    android:text=""/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".22"
                    android:text="@string/date"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:background="@color/button"
                    android:id="@+id/button_date_picker"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".02"
                    android:text=""/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edit_text"
                    android:layout_marginEnd="2dp"
                    android:inputType="date"
                    android:hint="DD-MM-YYYY"
                    android:paddingLeft="4dp"
                    android:layout_marginRight="0dp"
                    android:id="@+id/edit_text_date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.13"
                    android:layout_height="match_parent" />
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:background="@color/button"
                    android:text="@string/save"
                    android:id="@+id/button_save"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:background="@color/button"
                    android:text="@string/back"
                    android:id="@+id/button_back"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
